ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/birds"
        backend:
          service:
            name: birds-service
            port:
              number: 5000
      - pathType: Prefix
        path: "/horses"
        backend:
          service:
            name: horses-service
            port:
              number: 5000
